Scaffolding Vite + AntDesign + React TS del SGP+ | Creación del Router.

--- a/src/index.less
+++ b/src/index.less
@@ -2,7 +2,11 @@
 @import 'antd/dist/antd.less';
 
 html, body{
-    height: 99vh;
+    height: 100vh;
+}
+
+section.site-layout, footer.footer-layout {
+  background: #e8eef1;
 }
 
 .trigger {
@@ -30,20 +34,24 @@ html, body{
   }
 
   .container-layout{
-    border: 1px solid;
-    height: 98vh;
+    // border: 1px solid;
+    height: 100vh;
   }
 
   .footer-layout{
     /* border: 2px solid; */
     text-align: center;
-    margin: 16px;
+    margin: 8px;
     padding: 0px 16px;
+  }
+
+  .sider-layout {
+    background: #003f5c;
   }
 
   .login-layout{
     align-items: center;
     display: flex;
-    height: 99vh;
+    height: 100vh;
     justify-content: center;
   }
